# scola

./: .env.example  Cargo.toml  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  init-docker.sh
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_create_school_table.up.sql  0002_create_room_table.up.sql  0003_create_person_table.down.sql  0004_create_teacher_table.up.sql  0005_create_class_table.up.sql  0006_create_student_table.up.sql  0007_create_course_table.up.sql  0008_create_grade_table.up.sql  0010_create_ClassToCourse_table.up.sql  0011_create_lesson_table.up.sql  0013_create_lessonOverride_table.down.sql  0013_create_lessonOverride_table.up.sql  0014_seed_tables.down.sql  0014_seed_tables.up.sql
backend/requests/: auth.http  class.http  course.http  grade.http  room.http  school.http  semester.http  teacher.http  timetable.http
backend/src/: main.rs
backend/src/common/: admin_auth.rs  error.rs  extractors.rs  mod.rs  ownership.rs  session.rs  sql.rs  state.rs  types.rs
backend/src/routes/: mod.rs
backend/src/routes/auth/: guards.rs  handlers.rs  mod.rs  models.rs
backend/src/routes/class/: handlers.rs  models.rs
backend/src/routes/course/: handlers.rs
backend/src/routes/grade/: handlers.rs  models.rs
backend/src/routes/room/: handlers.rs  models.rs
backend/src/routes/school/: handlers.rs  models.rs
backend/src/routes/semester/: handlers.rs
backend/src/routes/teacher/: handlers.rs  models.rs
backend/src/routes/timetable/: handlers.rs  models.rs
migrations/: 0001_create_school_table.up.sql  0014_seed_tables.up.sql  (+12 more)
(+23 files in other folders)
